Respond: Miscellaneous UI Fixes (#1495)
* Context Hub Tooltip: Decrease font-size on Machine/LiveConnect

Issue before fix:
* In a previous PR we overrode the font-size of the context-hub
tabs/links so that the word UNKNOWN would fit completely on in the tab,
but there is also the possibility that SUSPICIOUS can appear there, and
it is currently truncated (with ellipsis)

What changed:
* Decreased the font-size to 90% to allow for full display of
SUSPICIOUS (the longest term that will appear the context hub tooltip)

Issue: ASOC-38229, ASOC-37150

* ASOC-37981: Navigating to incident can show incorrect details view

Issue before fix:
* If you entered the incident details page with the data sheet events
view active, switched to the nodal graph, and then searched for a
related indicator, and finally clicked on the link to another incident,
you would get reverted back to the data sheet events view instead of
the nodal graph

What changed:
* The problem was with some logic in the INITIALIZE_INCIDENT reducer
which tried to set `hideViz` property from state or from initial state
if it doesn’t exist. The problem is that since `hideVize` is a boolean
and can be (properly) `false`, whenever it was false, the property
would be set from initial state instead, even though we wanted the
false value from current state.
* Updated both `hideViz` and `isShowingTasksAndJournal` properties to
only look at state, since they are booleans and there is no reducer
function that would set them to any other (undefined/null) value.

Issue: ASOC-37981

* ASOC-37994: Cannot resize last column due to column picker

Issue before fix:
* There are times when there are a large number of columns and the
screen is smaller, that the column picker control covers some portion
of the last column. Since this resizer of the column is on the very
right of the cell, this means the column picker completely covers the
resizer, and the user cannot resize

What changed

--- a/context/app/styles/context/_context-tooltip.scss
+++ b/context/app/styles/context/_context-tooltip.scss
@@ -98,7 +98,7 @@ $contextTooltipDatumPadding: 0px;
     }
 
     &.Machines .value, &.LiveConnect .value {
-      font-size: 100%;
+      font-size: 90%;
       line-height: 1.75rem;
     }
 
